# eminor3

./: .gitignore  CMakeLists.txt  Makefile  README.md
common/: controller-data.c  controller.c  hardware.h  program-v5.h  types.h  util.c  util.h  v5_fx_names.h
null/: fsw.c  midi.c  ts-input.c
raspberrypi/: build.sh  flash.c  fsw-usb.c  fsw.h  lcd.c  main.c  midi-uart0.c  midi.c  sx1509-fsw-leds.c  ts-input.c  ts-input.h  ux-tty.c  ux.h
raspberrypi/sx1509/: test-led.c
